Swedish section added

--- a/en/about.html
+++ b/en/about.html
@@ -89,7 +89,7 @@
         </div>
         <!-- Language toggling link -->
         <div class="flag-icon-wrapper">
-            <a href="../sv/about.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon"></a>
+            <a href="../sv/about.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon" alt="Language toggle button"></a>
         </div>
     </div>
     <!-- My JavaScript -->
