--- a/en/contact.html
+++ b/en/contact.html
@@ -62,7 +62,7 @@
 
     <div class="container">
         <div class="row content-wrapper bg-light">
-            <div class="col-lg-2 col-md-12 left-col-style">
+            <div class="col-lg-4 col-md-12 left-col-style">
                 <h2>Contact information:</h2>
                 <br>
                 <br>
@@ -70,8 +70,8 @@
                     media presence, although the webmaster of this site maintains her Goodreads account. All emails will
                     be forwarded to Majgull, who will try to respond to as many inquiries as she can.</p>
             </div>
-            <div class="col-lg-9 col-md-12 center-col-style">
-                <h1>Contact form: </h1><br>
+            <div class="col-lg-8 col-md-12 center-col-style">
+                <h2>Contact form: </h2><br>
                 <form id="maContactSheet" class="form-horizontal">
                     <label for="inputSubject">Subject: </label>
                     <br>
@@ -101,7 +101,7 @@
         </div>
         <!-- Language toggling link -->
         <div class="flag-icon-wrapper">
-            <a href="../sv/contact.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon"></a>
+            <a href="../sv/contact.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon" alt="Language toggle button"></a>
         </div>
     </div>
 
