--- a/en/start.html
+++ b/en/start.html
@@ -50,7 +50,7 @@
   <div class="container">
     <div class="row content-wrapper bg-light">
       <div class="col-lg-2 col-med-3 col-sm-12 left-col-style">
-        <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg" style="max-width: 95%;">
+        <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg" alt="Portrait of Majgull Axelsson" style="max-width: 95%;">
         <br>
         <br>
         <h6>Majgull Axelsson is an author, lecturer and journalist from Landskrona, Sweden. Her books have been
@@ -63,7 +63,7 @@
       <div class="col-lg-6 col-med-5 col-sm-12 center-col-style">
         <h1>Welcome to Majgull Axelssons homepage!</h1>
         <br>
-        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;">
+        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;"" alt="Cover of April Witch">
         <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into
           over 20 languages. Through her career she has moved from producing
           documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that
@@ -103,7 +103,7 @@
 
     <!-- Language toggling link -->
     <div class="flag-icon-wrapper">
-      <a href="../sv/start.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon"></a>
+      <a href="../sv/start.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon" alt="Language toggle button"></a>
     </div>
   </div>
 
