--- a/sv/books.html
+++ b/sv/books.html
@@ -1,9 +1,9 @@
-<!-- English language version, only content is affected, code is the same in the /sv/ version with the exception of changed file-paths for internal assets.-->
+<!-- Swedish language version, only content is affected, code is the same in the /en/ version with the exception of changed file-paths for internal assets.-->
 <!doctype html>
-<html lang="en">
+<html lang="sv">
 
 <head>
-  <title>Majgull Axelsson - Author, lecturer and journalist</title>
+  <title>Majgull Axelsson - Böcker av Majgull Axelsson</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,16 +29,16 @@
     <div class="collapse navbar-collapse" id="main-nav">
       <ul class="navbar-nav">
         <li class="nav-item mr-2">
-          <a class="nav-link" href="start.html">Home</a>
+          <a class="nav-link" href="start.html">Hem</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Kontakt</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link active" href="books.html">Books</a>
+          <a class="nav-link active" href="books.html">Böcker</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="about.html">About the site</a>
+          <a class="nav-link" href="about.html">Om sidan</a>
         </li>
       </ul>
     </div>
@@ -50,29 +50,24 @@
 
         <!-- Buttons that trigger the tabs in accordance with bookLoader.js -->
         <div class="content-wrapper">
-          <h3>Majgulls Novels:</h3>
+          <h3>Majgulls romaner:</h3>
           <br>
-          <h5>Please select from the following titles:</h5>
+          <h5>Vänligen välj från listan:</h5>
           <br>
-          <button class="btn btn-default btn-book-style" id="btn-april-en">April Witch</button><br>
-          <button class="btn btn-default btn-book-style" id="btn-rosario-en">Rosario is dead</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-april-sv">Aprilhäxan</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-rosario-sv">Rosario är död</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-nifelheim-en">Far away from
-            Nifelheim</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-nifelheim-sv">Långt borta från Nifelheim</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-denjagaldrigvar-en">The woman I never
-            was</button><br>
-          <button class="btn btn-default btn-book-style" id="btn-dittlivochmitt-en">Your life and
-            mine</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-denjagaldrigvar-sv">Den jag aldrig var</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-dittlivochmitt-sv">Ditt liv och mitt</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-moderspassion-en">Mother's Passion</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-moderspassion-sv">Moderspassion</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-slumpvandring-en">Random Walk</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-slumpvandring-sv">Slumpvandring</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-miriam-en" href="#miriam-tab">My name is not
-            Miriam</button><br>
-          <button class="btn btn-default btn-book-style" id="btn-isochvatten-en">Ice and water, water and
-            ice</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-miriam-sv" href="#miriam-tab">Jag heter inte Miriam</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-isochvatten-sv">Is och vatten, vatten och is</button><br>
 
         </div>
 
@@ -97,7 +92,7 @@
     </div>
     <!-- Language toggling link -->
     <div class="flag-icon-wrapper">
-      <a href="../sv/books.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon" alt="Language toggle button"></a>
+      <a href="../en/books.html"><img src="../assets/images/icons/lang-token-sv.png" class="flag-toggle-icon" alt="Language toggle button"></a>
     </div>
   </div>
 
