--- a/sv/start.html
+++ b/sv/start.html
@@ -1,9 +1,9 @@
 <!-- Swedish language version, only content is affected, code is the same in the /en/ version with the exception of changed file-paths for internal assets.-->
 <!doctype html>
-<html lang="en">
+<html lang="sv">
 
 <head>
-  <title>Majgull Axelsson - Author, lecturer and journalist</title>
+  <title>Majgull Axelsson - Författare, föreläsare och journalist</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,57 +17,102 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body id="bg-img">
   <!-- NavBar -->
-  <nav class="navbar navbar-expand-sm bg-light navbar-light" id="navbar-styles">
+  <nav class="container-fluid navbar navbar-expand-sm bg-light navbar-light" id="navbar-styles">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"><span
         class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="main-nav">
       <ul class="navbar-nav">
         <li class="nav-item mr-2">
-          <a class="nav-link active" href="../en/start.html">Hem</a>
+          <a class="nav-link active" href="start.html">Hem</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="../en/contact.html">Kontact</a>
+          <a class="nav-link" href="contact.html">Kontakt</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="../en/books.html">Böcker</a>
+          <a class="nav-link" href="books.html">Böcker</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="../en/about.html">About the site</a>
+          <a class="nav-link" href="about.html">Om sidan</a>
         </li>
       </ul>
     </div>
-
-    <!-- Navbar section for toggling language, TODO: update on each html so the href is correct for that page -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link mr-4" href="../sv/start.html"><img src="../assets/images/icons/sweden-flag-icon-16.png"></a>
-      </li>
-      <li class="nav-item mr-4">
-        <a class="nav-link" href="../en/start.html"><img
-            src="../assets/images/icons/united-kingdom-flag-icon-16.png"></a>
-      </li>
-    </ul>
   </nav>
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-sm-12">
+      <div class="col-lg-2 col-med-3 col-sm-12 left-col-style">
+        <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg" alt="Bild på Majgull Axelsson"
+          style="max-width: 95%;">
+        <br>
+        <br>
+        <h6>Majgull Axelsson är en författare, föreläsare och journalist från Landskrona. Hennes böcker har översatts
+          till över tjugo språk. Bland de priser hon vunnit för sitt författarskap finns Augustpriset (1997),
+          BMF-Plaketten (1997 & 2014) och Ivar Lo-priset (2015).</h6>
+        <br>
 
-        <h1>Under konstruktion!</h1>
-        <p>Den svenska delen av sidan är tyvärr just nu under konstruktion! Vänligen försök senare.</p>
       </div>
+      <div class="col-lg-6 col-med-5 col-sm-12 center-col-style">
+        <h1>Välkommen till Majgull Axelssons hemsida!</h1>
+        <br>
+        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;"" alt=" Omslag för
+          Aprilhäxan">
+        <p>Den här hemsidan är Majgull Axelssons officiella hemsida. Majgull är en författare som översatts till över 20
+          språk. Genom sin karriär har hon producerat dokumentärböcker om barnarbete och gatubarn och romaner som
+          Aprilhäxan, som granskar välfärdssamhället under nitton-och-tjugohundratalen.
+          <br>
+          <br>
+          Majgull använder inga sociala medier (Dock sköter hemsidans redaktör hennes <a
+            href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads-sida</a>).
+          Denna sida är det bästa sättet att kontakta Majgull med frågor och för att hålla sig informerad om Majgulls
+          framträdanden.
+          <br>
+          <br>
+          För att få mer information om specifika böcker som Majgull skrivits, vänligen besök <a
+            href="books.html">bok-sidan</a>, som innehåller citat från recensioner, baksidestexter och ISBN-sidor för
+          alla hennes romaner samt länkar till Goodreads för alla hennes böcker.<br>
+          Om du vill kontakta Majgull, vänligen gå till <a href="contact.html">kontakt-sidan</a> och fyll i formuläret.
+          Ditt meddelande kommer vidarbefordras direkt till Majgull.<br>
+          Vill du ha mer information om Majgulls bakgrund, kontakt med hennes förläggare eller sidan i sig kan du besöka
+          <a href="about.html">'Om sidan'</a>.<br>
+          Vill du ha information om framträdanden så kan du se dem på denna sida. Du kan också använda dig av länkarna
+          till kalendern och kartor till platsen för framträdanden.
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-3 col-sm-12 right-col-style">
+
+        <h3>Framträdanden:</h3>
+        <i class='far fa-calendar-check'></i>: Kalenderlänk<br>
+        <i class='fas fa-map-marker'></i>: Kartlänk<br>
+        <i class="fas fa-clock"></i>: Datum och klockslag<br>
+
+        <br>
+        <span id="calendar-events" style="margin: auto;">
+        </span>
+      </div>
+    </div>
+
+    <!-- Language toggling link -->
+    <div class="flag-icon-wrapper">
+      <a href="../en/start.html"><img src="../assets/images/icons/lang-token-sv.png" class="flag-toggle-icon"
+          alt="Language toggle button"></a>
     </div>
   </div>
 
-  <!-- My JavaScript -->
-  <script type="javascript" src="../assets/js/main.js"></script>
 
+  <!-- My JavaScript -->
+  <script src="../assets/js/main.js"></script>
+  <!-- Config.js not included as it contains protected data (API-keys etc), available for review on request. -->
+  <script src="../assets/js/config.js"></script>
+  <script src="../assets/js/loadCalEvents.js"></script>
 </body>
 
 </html>
