--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Display used with inline JavaScript to use jQuery hide while maintaining compatibility for users without JS in their browsers. A rarity, but Stack Oveflow said it could happen. -->
 
 
-    <span class="row">
+    <div class="row">
       <div class="col-12 index-headers">
         <h1>Majgull Axelsson - Author, Lecturer, Journalist</h1><br>
         <br>
@@ -43,19 +43,20 @@
 
       <div class="col-md language-choice">
 
-        <a id="en" href="en\start.html"><img src="assets/images/icons/united-kingdom-flag-icon-16.png"><br>
+        <a id="en" href="en/start.html"><img src="assets/images/icons/united-kingdom-flag-icon-16.png"  alt="Language toggle button (English)"><br>
           <h3>English</h3>
         </a><br>
       </div>
 
       <div class="col-md language-choice">
-        <a id="sv" href="sv\start.html"><img src="assets\images\icons\sweden-flag-icon-16.png"><br>
+        <a id="sv" href="sv/start.html"><img src="assets/images/icons/sweden-flag-icon-16.png"  alt="Language toggle button (Swedish)"><br>
           <h3>Svenska</h3>
         </a><br>
       </div>
-    </span>
+    </div>
+  </div>
 
-    <script type="text/javascript">
+    <script>
 
       // Fade-in animation to trigger when the DOM is fully loaded.
 
@@ -68,7 +69,6 @@
     </script>
 
     <!-- My JavaScript -->
-    <script type="javascript" src="assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
-
 </html>
