HTML, CSS validated

--- a/en/books.html
+++ b/en/books.html
@@ -69,7 +69,7 @@
 
           <button class="btn btn-default btn-book-style" id="btn-slumpvandring-en">Random Walk</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-miriam-en" href="#miriam-tab">My name is not
+          <button class="btn btn-default btn-book-style" id="btn-miriam-en">My name is not
             Miriam</button><br>
           <button class="btn btn-default btn-book-style" id="btn-isochvatten-en">Ice and water, water and
             ice</button><br>
@@ -78,9 +78,9 @@
 
       </div>
       <div class="col-md-8 col-xs-12 center-col-style">
-        <span id="book-content-span">
-          <span id="img-container">
-          </span>
+        <div id="book-content-span">
+          <div id="img-container">
+          </div>
           <p id="book-data" style="float: right;">
           <h2 id="title"></h2>
           <br>
@@ -91,8 +91,7 @@
           <h5 id="quote"></h5>
           <br>
           <h5 id="goodreads"></h5>
-          </p>
-        </span>
+        </div>
       </div>
     </div>
     <!-- Language toggling link -->
