--- a/en/start.html
+++ b/en/start.html
@@ -63,7 +63,7 @@
       <div class="col-lg-6 col-med-5 col-sm-12 center-col-style">
         <h1>Welcome to Majgull Axelssons homepage!</h1>
         <br>
-        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;"" alt="Cover of April Witch">
+        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;" alt="Cover of April Witch">
         <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into
           over 20 languages. Through her career she has moved from producing
           documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that
