--- a/sv/books.html
+++ b/sv/books.html
@@ -66,14 +66,14 @@
 
           <button class="btn btn-default btn-book-style" id="btn-slumpvandring-sv">Slumpvandring</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-miriam-sv" href="#miriam-tab">Jag heter inte Miriam</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-miriam-sv">Jag heter inte Miriam</button><br>
           <button class="btn btn-default btn-book-style" id="btn-isochvatten-sv">Is och vatten, vatten och is</button><br>
 
         </div>
 
       </div>
       <div class="col-md-8 col-xs-12 center-col-style">
-        <span id="book-content-span">
+        <div id="book-content-span">
           <span id="img-container">
           </span>
           <p id="book-data" style="float: right;">
@@ -86,8 +86,7 @@
           <h5 id="quote"></h5>
           <br>
           <h5 id="goodreads"></h5>
-          </p>
-        </span>
+        </div>
       </div>
     </div>
     <!-- Language toggling link -->
