--- a/sv/start.html
+++ b/sv/start.html
@@ -63,7 +63,7 @@
       <div class="col-lg-6 col-med-5 col-sm-12 center-col-style">
         <h1>Välkommen till Majgull Axelssons hemsida!</h1>
         <br>
-        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;"" alt=" Omslag för
+        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;" alt=" Omslag för
           Aprilhäxan">
         <p>Den här hemsidan är Majgull Axelssons officiella hemsida. Majgull är en författare som översatts till över 20
           språk. Genom sin karriär har hon producerat dokumentärböcker om barnarbete och gatubarn och romaner som
