Added favicon + links in all HTML.

--- a/en/books.html
+++ b/en/books.html
@@ -3,10 +3,12 @@
 <html lang="en">
 
 <head>
-  <title>Majgull Axelsson - Author, lecturer and journalist</title>
+  <title>Books by Majgull Axelsson</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
 
   <!-- jQuery, Bootstrap etc-->
