Fixes to index.html layout

--- a/index.html
+++ b/index.html
@@ -36,41 +36,44 @@
       <div class="col-12 index-headers">
         <h1>Majgull Axelsson - Author, Lecturer, Journalist</h1><br>
         <br>
-        <h2> Please choose between the Swedish or English version of this site / Var vänlig välj mellan den engelska
-          eller den svenska versionen av hemsidan</h2><br>
       </div>
 
       <br>
       <br>
 
       <div class="col-md language-choice">
-
-        <a id="en" href="en/start.html"><img src="assets/images/icons/united-kingdom-flag-icon-16.png"  alt="Language toggle button (English)"><br>
+        <h2> Please choose between the Swedish or English version of this site</h2>
+        <a id="en" href="en/start.html"><img src="assets/images/icons/united-kingdom-flag-icon-16.png"
+            alt="Language toggle button (English)"><br>
           <h3>English</h3>
         </a><br>
       </div>
 
       <div class="col-md language-choice">
-        <a id="sv" href="sv/start.html"><img src="assets/images/icons/sweden-flag-icon-16.png"  alt="Language toggle button (Swedish)"><br>
+        <h2>Var vänlig välj mellan den engelska
+          eller den svenska versionen av hemsidan</h2>
+        <a id="sv" href="sv/start.html"><img src="assets/images/icons/sweden-flag-icon-16.png"
+            alt="Language toggle button (Swedish)"><br>
           <h3>Svenska</h3>
         </a><br>
       </div>
     </div>
   </div>
 
-    <script>
+  <script>
 
-      // Fade-in animation to trigger when the DOM is fully loaded.
+    // Fade-in animation to trigger when the DOM is fully loaded.
 
-      $(document).ready(function () {
+    $(document).ready(function () {
 
-        $("#index-intro-container").fadeIn(1000);
+      $("#index-intro-container").fadeIn(1000);
 
-      });
+    });
 
-    </script>
+  </script>
 
-    <!-- My JavaScript -->
-    <script src="assets/js/main.js"></script>
+  <!-- My JavaScript -->
+  <script src="assets/js/main.js"></script>
 </body>
+
 </html>
